--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -4,7 +4,7 @@ on:
 jobs:
   mvn:
     runs-on: ubuntu-latest
-    name: 'git checkout'
+    name: 'run build'
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -14,14 +14,6 @@ jobs:
         with:
           java-version: '8'
           distribution: 'adopt'
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v1
-        with:
-          config-file: ./.github/codeql-config.yml
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v1
 
       - name: Build
         run: mvn --batch-mode -DskipTests package
@@ -34,6 +26,15 @@ jobs:
         with:
           name: Package
           path: staging
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          config-file: ./.github/codeql-config.yml
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
+
       - name: Report
         uses: dorny/test-reporter@v1
         if: always()
