--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -4,12 +4,18 @@ on:
 jobs:
   mvn:
     runs-on: ubuntu-latest
+    permissions:
+      # required for all workflows
+      security-events: write
+      # only required for workflows in private repositories
+      actions: read
+      contents: read
     name: 'run build'
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set up JDK 1.11
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v3
         with:
           java-version: '8'
@@ -24,16 +30,8 @@ jobs:
       - run: mkdir staging && cp target/*.jar staging
       - uses: actions/upload-artifact@v3
         with:
-          name: Package
+          name: hello-world
           path: staging
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
-        with:
-          config-file: ./.github/codeql-config.yml
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
 
       - name: Report
         uses: dorny/test-reporter@v1
@@ -44,3 +42,9 @@ jobs:
           reporter: java-junit
           fail-on-error: true
 
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: java
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
