--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -52,3 +52,7 @@ jobs:
         with:
           name: hello-world
           path: staging
+      - name: Code Coverage Summary Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: /target/site/jacoco/*.xml
