--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -49,4 +49,4 @@ jobs:
 
       - name: Generate JaCoCo Badge
         uses: cicirello/jacoco-badge-generator@v2
-          jacoco-csv-file: target/site/jacoco/jacoco.csv
+          jacoco-csv-file: "target/site/jacoco/jacoco.csv"
