--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -49,4 +49,11 @@ jobs:
 
       - name: Generate JaCoCo Badge
         uses: cicirello/jacoco-badge-generator@v2
+        with:
           jacoco-csv-file: "target/site/jacoco/jacoco.csv"
+
+#      - run: mkdir staging && cp target/*.jar staging
+#      - uses: actions/upload-artifact@v3
+#        with:
+#          name: hello-world
+#          path: staging
