--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -19,10 +19,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
-        with:
-          languages: java
+#      - name: Initialize CodeQL
+#        uses: github/codeql-action/init@v2
+#        with:
+#          languages: java
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v3
@@ -30,22 +30,22 @@ jobs:
           java-version: '8'
           distribution: 'adopt'
 
-      - name: Build
-        run: mvn --batch-mode -DskipTests package
+#      - name: Build
+#        run: mvn --batch-mode -DskipTests package
 
       - name: Unit-Test
-        run: mvn --batch-mode -Dmaven.test.failure.ignore=true test
+        run: mvn test
 
       - name: int-test
         run: mvn verify 
 
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v2
+#      - name: Autobuild
+#        uses: github/codeql-action/autobuild@v2
 
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
-        with:
-          category: "/language:java"
+#      - name: Perform CodeQL Analysis
+#        uses: github/codeql-action/analyze@v2
+#        with:
+#          category: "/language:java"
 
       - name: Generate JaCoCo Badge
         uses: cicirello/jacoco-badge-generator@v2
