--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -19,15 +19,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-#      - name: Set up JDK 1.8
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: '8'
-#          distribution: 'adopt'
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
+          java-version: '8'
+          distribution: 'adopt'
+
 
 #      - name: Build
 #        run: mvn --batch-mode -DskipTests package
