--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -18,12 +18,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
+        
       - name: Set up JDK 11
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v1
         with:
-          java-version: '11'
-
+          java-version: 11
 
 #      - name: Build
 #        run: mvn --batch-mode -DskipTests package
