--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -1,47 +1,21 @@
-name: build mvn pipeline
+name: Build
 on:
-  workflow_dispatch:
   push:
     branches:
-      - 'main'
+      - master # or the name of your main branch
+
 jobs:
-  mvn:
+  build:
+    name: Build
     runs-on: ubuntu-latest
-    permissions:
-      # required for all workflows
-      security-events: write
-      # only required for workflows in private repositories
-      actions: read
-      contents: read
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'java' ]
-    name: 'run build'
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11
-
-#      - name: Build
-#        run: mvn --batch-mode -DskipTests package
-
-#      - name: Unit-Test
-#        run: mvn test
-
-#      - name: int-test
-#        run: mvn verify 
-#      - name: sonar-scan
-#        uses: kitabisa/sonarqube-action@master
-#        with:
-#          host: ${{ secrets.SONARQUBE_HOST }}
-#          login: ${{ secrets.SONARQUBE_TOKEN }}
-#          projectBaseDir: "src/"
-#          projectKey: "my-custom-project"
       - name: Cache SonarQube packages
         uses: actions/cache@v1
         with:
@@ -60,8 +34,3 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=my-custom-project
-      - run: mkdir staging && cp target/*.jar staging
-      - uses: actions/upload-artifact@v3
-        with:
-          name: hello-world
-          path: staging
