--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -14,14 +14,15 @@ jobs:
       fail-fast: false
       matrix:
         language: [ 'java' ]
-    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Set up JDK 11
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
+          distribution: zulu
           java-version: 11
       - name: Build
         run: mvn --batch-mode -DskipTests package
