--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         language: [ 'java' ]
-    runs-on: [ self-hosted, ubuntu-latest]
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
         with:
