--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -24,6 +24,10 @@ jobs:
         with:
           distribution: zulu
           java-version: 11
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v4.5
+        with:
+          maven-version: 3.8.2
       - name: Build
         run: mvn --batch-mode -DskipTests package
 
