--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -56,9 +56,13 @@ jobs:
       - run: |
           mkdir staging && cp target/*.jar staging
           ls -l target/site/jacoco
-          tree target/
+          
       
       - uses: actions/upload-artifact@v3
         with:
           name: hello-world
           path: staging
+      - uses: actions/upload-artifact@v3
+        with:
+          name: index.html
+          path: target/site/jacoco
