--- a/.github/workflows/codeql-check.yaml
+++ b/.github/workflows/codeql-check.yaml
@@ -6,7 +6,7 @@ jobs:
   CodeQL-Build:
 
     # CodeQL runs on ubuntu-latest and windows-latest
-    runs-on: ubuntu-latest
+    runs-on: mylab-vm
 
     steps:
     - name: Checkout repository
