--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -24,9 +24,9 @@ jobs:
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4.5
         with:
-          maven-version: 3.9.4
+          maven-version: 3.8.2
       - name: Build
-        run: mvn clean test verify package -Pjacoco 
+        run: mvn clean verify -Pjacoco 
    
       - run: |
           mkdir staging && cp target/*.jar staging
