--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -11,7 +11,7 @@ jobs:
       actions: read
       contents: read
 
-    runs-on: ubuntu-latest
+    runs-on: mylab-vm
     steps:
       - uses: actions/checkout@v3
         with:
