--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -26,7 +26,12 @@ jobs:
         with:
           maven-version: 3.8.2
       - name: Build
-        run: mvn clean test package verify -Pjacoco
+        env:
+          GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+        run: |
+          mkdir ~/.m2
+          echo "<settings><servers><server><id>gitlab</id><username>vijay</username><password>${GITLAB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
+          mvn clean test package verify deploy -Pjacoco
    
       - run: |
           mkdir staging && cp target/*.jar staging
