--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -29,7 +29,7 @@ jobs:
         env:
           GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
         run: |
-          mkdir ~/.m2
+          mkdir -p ~/.m2
           echo "<settings><servers><server><id>gitlab</id><username>vijay</username><password>${GITLAB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
           mvn clean test package verify deploy -Pjacoco
    
