--- a/.github/workflows/mvn-build.yaml
+++ b/.github/workflows/mvn-build.yaml
@@ -13,30 +13,29 @@ jobs:
 
     runs-on: mylab-vm
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Set up JDK java
+        uses: actions/setup-java@v4
         with:
           distribution: zulu
           java-version: 17
+          cache: 'maven'
+          server-id: gitea
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4.5
         with:
           maven-version: 3.8.2
       - name: Build
         env:
-          GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+          MAVEN_USERNAME: ${{ secrets.GITEAUSERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.GITEATOKEN }}
         run: |
-          #mkdir -p ~/.m2
-          #echo "<settings><servers><server><id>gitlab</id><username>vijay</username><password>${GITLAB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
-          mvn test
-   
-      - run: |
-          mkdir staging && cp target/*.jar staging
-          ls -l target/site/jacoco
-          
+          pwd && ls -l
+          mvn -B package deploy --file pom.xml
       
       - uses: actions/upload-artifact@v3
         with:
