--- a/pom.xml
+++ b/pom.xml
@@ -268,31 +268,15 @@
     </plugins>
   </build>
 
-  <licenses>
-    <license>
-      <name>Apache License, Version 2.0</name>
-      <url>https://www.apache.org/licenses/LICENSE-2.0</url>
-    </license>
-  </licenses>
-
   <repositories>
     <repository>
-      <id>spring-snapshots</id>
+      <id>gitea</id>
       <name>Spring Snapshots</name>
-      <url>https://repo.spring.io/snapshot</url>
+      <url>https://git.k8s.mevijay.dev/api/packages/vijay/maven</url>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
     </repository>
-    <repository>
-      <id>spring-milestones</id>
-      <name>Spring Milestones</name>
-      <url>https://repo.spring.io/milestone</url>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-    </repository>
-  </repositories>
 
   <pluginRepositories>
     <pluginRepository>
